Se implementa Editar, Eliminar y Formatear Fecha a Date